--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/application.properties
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 server.port=8080
 server.servlet.context-path=/GummyBearAdmin
+
+spring.datasource.url=jdbc:mysql://localhost:3306/gummybeardb
+spring.datasource.username=root
+spring.datasource.password=password
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
