Added dependency for GummyBearCommon to GummyBearWebParent's pom file.

--- a/GummyBearWebParent/pom.xml
+++ b/GummyBearWebParent/pom.xml
@@ -44,6 +44,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.gummybear</groupId>
+			<artifactId>GummyBearCommon</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 
 
