--- a/GummyBearWebParent/pom.xml
+++ b/GummyBearWebParent/pom.xml
@@ -46,6 +46,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		
+		<dependency>
 			<groupId>com.gummybear</groupId>
 			<artifactId>GummyBearCommon</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
