Added dependencies for jquery and bootstrap to GummyBearWebParent/pom.xml.

--- a/GummyBearWebParent/pom.xml
+++ b/GummyBearWebParent/pom.xml
@@ -52,6 +52,23 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>4.3.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator-core</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>com.gummybear</groupId>
 			<artifactId>GummyBearCommon</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
