--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/application.properties
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/gummybeardb
 spring.datasource.username=root
 spring.datasource.password=password
 
+server.servlet.session.timeout=10m
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
