unmade the checkemail method

--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/application.properties
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/GummyBearAdmin
 
 spring.datasource.url=jdbc:mysql://localhost:3306/gummybeardb
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Vac36bd457397b3
 
 server.servlet.session.timeout=10m
 
