--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/application.properties
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 server.port=8180
 server.servlet.context-path=/GummyBear
+
+spring.datasource.url=jdbc:mysql://localhost:3306/gummybeardb
+spring.datasource.username=root
+spring.datasource.password=Vac36bd457397b3
+
+server.servlet.session.timeout=10m
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
