Working hours input created

--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/application.properties
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/GummyBear
 
 spring.datasource.url=jdbc:mysql://localhost:3306/gummybeardb
 spring.datasource.username=root
-spring.datasource.password=Vac36bd457397b3
+spring.datasource.password=ThitariWeibel1991.
 
 server.servlet.session.timeout=10m
 
