Logger - Login, Logout created [BackEnd is done] but [FrontEnd is not completed]

--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/application.properties
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/GummyBear
 
 spring.datasource.url=jdbc:mysql://localhost:3306/gummybeardb
 spring.datasource.username=root
-spring.datasource.password=ThitariWeibel1991.
+spring.datasource.password=password
 
 server.servlet.session.timeout=10m
 
@@ -11,3 +11,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+server.error.whitelabel.enabled=false
+
+logging.level.com.gummybear.security.GummyBearUserDetailsService=DEBUG
+logging.level.com.gummybear.security.CustomLogoutSuccesHandler=DEBUG
+
+#logging.pattern.console=%highlight(%-5level) %yellow(%date{dd MM yyy - HH:mm:ss.SSS}) %blue([%thread]) %cyan%(logger{36}) - %green(%msg%n)
+
+
+logging.file.name=GummyBear-FrontEnd-log.txt
+#logging.pattern.file=%date{dd MM yyy - HH:mm:ss.SSS} [%thread] %logger{36} - %msg%n
