--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/application.properties
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/application.properties
@@ -4,10 +4,25 @@ server.servlet.context-path=/GummyBearAdmin
 spring.datasource.url=jdbc:mysql://localhost:3306/gummybeardb
 spring.datasource.username=root
 spring.datasource.password=password
-
 server.servlet.session.timeout=10m
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+server.error.whitelabel.enabled=false
+
+#debug=true
+#logging.level.root=DEBUG
+logging.level.com.gummybear.admin.security.GummyBearUserDetailsService=DEBUG
+logging.level.com.gummybear.admin.security.CustomLogoutSuccesHandler=DEBUG
+
+logging.pattern.console=%highlight(%-5level) %yellow(%date{dd MM yyy - HH:mm:ss.SSS}) %blue([%thread]) %cyan%(logger{36}) - %green(%msg%n)
+
+
+logging.file.name=GummyBear-Backend-log.txt
+logging.pattern.file=%date{dd MM yyy - HH:mm:ss.SSS} [%thread] %logger{36} - %msg%n
+
+
+
