Log file updated - User Login/Logout history

--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/application.properties
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/application.properties
@@ -15,14 +15,19 @@ server.error.whitelabel.enabled=false
 
 #debug=true
 #logging.level.root=DEBUG
-logging.level.com.gummybear.admin.security.GummyBearUserDetailsService=DEBUG
-logging.level.com.gummybear.admin.security.CustomLogoutSuccesHandler=DEBUG
+logging.level.com.gummybear.admin.security.GummyBearUserDetailsService=INFO
+logging.level.com.gummybear.admin.security.CustomLogoutSuccesHandler=INFO
 
-logging.pattern.console=%highlight(%-5level) %yellow(%date{dd MM yyy - HH:mm:ss.SSS}) %blue([%thread]) %cyan%(logger{36}) - %green(%msg%n)
+#logging.pattern.console=%highlight(%-5level) %yellow(%date{dd MM yyy - HH:mm:ss.SSS}) %blue([%thread]) %cyan%(logger{36}) - %green(%msg%n)
 
 
-logging.file.name=GummyBear-Backend-log.txt
-logging.pattern.file=%date{dd MM yyy - HH:mm:ss.SSS} [%thread] %logger{36} - %msg%n
+logging.file.name=GummyBearBackEnd.log
+logging.pattern.file=%d [%thread] %-5level %-50logger{40} : %msg%n
+logging.pattern.rolling-file-name=GummyBearBackEnd-%d{yyy-MM-dd}.%i.log
+logging.file.max-size=2KB
+logging.file.max-history=2
+logging.file.total-size-cap=20KB
+logging.file.clean-history-on-start=true
 
 
 
