--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/application.properties
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/application.properties
@@ -14,11 +14,16 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 server.error.whitelabel.enabled=false
 
-logging.level.com.gummybear.security.GummyBearUserDetailsService=DEBUG
-logging.level.com.gummybear.security.CustomLogoutSuccesHandler=DEBUG
+#logging.level.com.gummybear.security.GummyBearUserDetailsService=DEBUG
+#logging.level.com.gummybear.security.CustomLogoutSuccesHandler=DEBUG
 
 #logging.pattern.console=%highlight(%-5level) %yellow(%date{dd MM yyy - HH:mm:ss.SSS}) %blue([%thread]) %cyan%(logger{36}) - %green(%msg%n)
 
 
-logging.file.name=GummyBear-FrontEnd-log.txt
-#logging.pattern.file=%date{dd MM yyy - HH:mm:ss.SSS} [%thread] %logger{36} - %msg%n
+logging.file.name=GummyBearFrontEnd.log
+logging.pattern.file=%d [%thread] %-5level %-50logger{40} : %msg%n
+logging.pattern.rolling-file-name=GummyBearFrontEnd-%d{yyy-MM-dd}.%i.log
+logging.file.max-size=2KB
+logging.file.max-history=2
+logging.file.total-size-cap=20KB
+logging.file.clean-history-on-start=true
